# aws-lambda-proxy

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
