[package]
name = "aws-lambda-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum core
axum = "0.7"
# Tokio runtime
tokio = { version = "1.35", features = ["full"] }
# Tower utilities for middleware
tower = { version = "0.4", features = ["util"] }
# HTTP tracing/logging middleware
tower-http = { version = "0.5", features = ["trace"] }
# Tracing/logging implementation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Body type for request/response
bytes = "1.5"
serde = "1"
serde_json = "1"
base64 = "0.21"
url = "2.5"
reqwest = "0.12"
chrono = "0.4"